; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/port/extr_sysv_shmem.c_GetHugePageSize.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/port/extr_sysv_shmem.c_GetHugePageSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAP_HUGETLB = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"/proc/meminfo\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.2 = private unnamed_addr constant [20 x i8] c"Hugepagesize: %u %c\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @GetHugePageSize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @GetHugePageSize(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca [128 x i8], align 16
  %7 = alloca i32, align 4
  %8 = alloca i8, align 1
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %9 = load i32*, i32** %3, align 8
  store i32 2097152, i32* %9, align 4
  %10 = load i32, i32* @MAP_HUGETLB, align 4
  %11 = load i32*, i32** %4, align 8
  store i32 %10, i32* %11, align 4
  %12 = call i32* @AllocateFile(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %12, i32** %5, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %38

15:                                               ; preds = %2
  br label %16

16:                                               ; preds = %34, %15
  %17 = getelementptr inbounds [128 x i8], [128 x i8]* %6, i64 0, i64 0
  %18 = load i32*, i32** %5, align 8
  %19 = call i64 @fgets(i8* %17, i32 128, i32* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %35

21:                                               ; preds = %16
  %22 = getelementptr inbounds [128 x i8], [128 x i8]* %6, i64 0, i64 0
  %23 = call i32 @sscanf(i8* %22, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i64 0, i64 0), i32* %7, i8* %8)
  %24 = icmp eq i32 %23, 2
  br i1 %24, label %25, label %34

25:                                               ; preds = %21
  %26 = load i8, i8* %8, align 1
  %27 = sext i8 %26 to i32
  %28 = icmp eq i32 %27, 107
  br i1 %28, label %29, label %33

29:                                               ; preds = %25
  %30 = load i32, i32* %7, align 4
  %31 = mul i32 %30, 1024
  %32 = load i32*, i32** %3, align 8
  store i32 %31, i32* %32, align 4
  br label %35

33:                                               ; preds = %25
  br label %34

34:                                               ; preds = %33, %21
  br label %16

35:                                               ; preds = %29, %16
  %36 = load i32*, i32** %5, align 8
  %37 = call i32 @FreeFile(i32* %36)
  br label %38

38:                                               ; preds = %35, %2
  ret void
}

declare dso_local i32* @AllocateFile(i8*, i8*) #1

declare dso_local i64 @fgets(i8*, i32, i32*) #1

declare dso_local i32 @sscanf(i8*, i8*, i32*, i8*) #1

declare dso_local i32 @FreeFile(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
